added feature section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam
               facilis necessitatibus accusamus similique autem, volupt.
             </p>
-
             <a href="#" class="btn-text">Learn more &rarr; </a>
           </div>
           <div class="col-1-of-2">
@@ -74,6 +73,54 @@
                 alt="photo3"
                 class="composition__photo composition__photo--p3"
               />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-margin-small">Explore the world</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                quisquam au rem ipsum dolor sit amet
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-small">Meet nature</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                quisquam au rem ipsum dolor sit amet
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-small">Find your way</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                quisquam au rem ipsum dolor sit amet
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-small">
+                Live a healtheir life
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                quisquam au rem ipsum dolor sit amet
+              </p>
             </div>
           </div>
         </div>
