added user react

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <h3 class="heading-tertiary u-margin-small">Meet nature</h3>
               <p class="feature-box__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
-                quisquam au rem ipsum dolor sit amet
+                quisquam au rem ipsum dolor sit amet quisqufggdolor
               </p>
             </div>
           </div>
@@ -107,7 +107,7 @@
               <h3 class="heading-tertiary u-margin-small">Find your way</h3>
               <p class="feature-box__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
-                quisquam au rem ipsum dolor sit amet
+                quisquam au rem ipsum dolor sit amet quisqufggdolor
               </p>
             </div>
           </div>
@@ -157,7 +157,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$297</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -187,7 +187,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$497</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -217,16 +217,119 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$897</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="u-center-text u-margin-top-big">
+          <a href="#" class="btn btn--green">Discover more tours</a>
+        </div>
+      </section>
+
+      <section class="section-stories">
+        <div class="u-center-text u-margin-big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="img/nat-8.jpg" alt="nat8" class="story__img" />
+              <figcaption class="story__caption">Mohit Singh</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+                enim voluptas accusamus consequatur nostrum accusantium
+                assumenda nisi, autem quod sed corrupti, atque quia quos veniam
+                aspernatur illum eum beatae cumque. Lorem ipsum dolor sit amet
+                praesentium delectus quaerat repellat.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="img/nat-9.jpg" alt="nat8" class="story__img" />
+              <figcaption class="story__caption">Mohit Singh</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-small">
+                WOW! my life is completly different now
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+                enim voluptas accusamus consequatur nostrum accusantium
+                assumenda nisi, autem quod sed corrupti, atque quia quos veniam
+                aspernatur illum eum beatae cumque. Lorem ipsum dolor sit amet
+                praesentium delectus quaerat repellat.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="img/nat-9.jpg" alt="nat8" class="story__img" />
+              <figcaption class="story__caption">Mohit Singh</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-small">
+                WOW! my life is completly different now
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+                enim voluptas accusamus consequatur nostrum accusantium
+                assumenda nisi, autem quod sed corrupti, atque quia quos veniam
+                aspernatur illum eum beatae cumque. Lorem ipsum dolor sit amet
+                praesentium delectus quaerat repellat.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-small">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
       </section>
     </main>
 
-    <section class="grid-test">
+    <div class="popup" id="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="tour1" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="tour2" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <a href="#section-tours" class="popup__close">X</a>
+          <h2 class="heading-secondary u-margin-medium">Start booking now</h2>
+          <h3 class="heading-tertiary u-margin-small">
+            Important &ndash; Please read these term before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+            quibusdam fugit repellat, natus rerum reprehenderit odit illo
+            corrupti explicabo quaerat sunt odio tenetur accusamus totam sequi
+            ea suscipit laborum iste! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Explicabo aliquid saepe quidem perferendis cumque
+            accusamus cupiditate voluptates quia praesentium expedita fuga
+            inventore numquam corporis eius fugit facilis vero, perspiciatis
+            sed. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Accusantium nesciunt tempore architecto, dicta labore sapiente ullam
+            perspiciatis minima officia maxime, expedita quibusdam et ipsam
+            harum hic amet eaque odit quis.
+          </p>
+          <a href="#" class="btn btn--green">Book Now</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">col 1 of 2</div>
         <div class="col-1-of-2">col 1 of 2</div>
@@ -260,6 +363,6 @@
         <div class="col-1-of-4">col 1 of 4</div>
         <div class="col-3-of-4">col 3 of 4</div>
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
