--- a/index.html
+++ b/index.html
@@ -229,6 +229,13 @@
       </section>
 
       <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Your browser is not supported
+          </video>
+        </div>
         <div class="u-center-text u-margin-big">
           <h2 class="heading-secondary">We make people genuinely happy</h2>
         </div>
@@ -273,28 +280,73 @@
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="story">
-            <figure class="story__shape">
-              <img src="img/nat-9.jpg" alt="nat8" class="story__img" />
-              <figcaption class="story__caption">Mohit Singh</figcaption>
-            </figure>
-            <div class="story__text">
-              <h3 class="heading-tertiary u-margin-small">
-                WOW! my life is completly different now
-              </h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
-                enim voluptas accusamus consequatur nostrum accusantium
-                assumenda nisi, autem quod sed corrupti, atque quia quos veniam
-                aspernatur illum eum beatae cumque. Lorem ipsum dolor sit amet
-                praesentium delectus quaerat repellat.
-              </p>
-            </div>
-          </div>
-        </div>
         <div class="u-center-text u-margin-top-small">
           <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+      </section>
+
+      <section class="section-book">
+        <div class="row">
+          <div class="book">
+            <div class="book__form">
+              <form action="#" class="form">
+                <div class="u-margin-medium">
+                  <h2 class="heading-secondary">Start Booking now</h2>
+                </div>
+                <div class="form__group">
+                  <input
+                    type="text"
+                    class="form__input"
+                    placeholder="Full Name"
+                    id="name"
+                    required
+                  />
+                  <label for="name" class="form__label">Full Name</label>
+                </div>
+
+                <div class="form__group">
+                  <input
+                    type="email"
+                    class="form__input"
+                    placeholder="Email address"
+                    id="email"
+                    required
+                  />
+                  <label for="email" class="form__label">Email address</label>
+                </div>
+                <div class="form__group">
+                  <div class="form__radio-group u-margin-small">
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="small"
+                      name="size"
+                    />
+                    <label for="small" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Small tour group</label
+                    >
+                  </div>
+                  <div class="form__radio-group">
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="large"
+                      name="size"
+                    />
+                    <label for="large" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+
+                      large tour group</label
+                    >
+                  </div>
+                </div>
+                <div class="form__group">
+                  <button class="btn--green btn">Next step &rarr;</button>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
       </section>
     </main>
